--- a/_layouts/kitap.html
+++ b/_layouts/kitap.html
@@ -1,24 +1,10 @@
 ---
-layout: default
+layout: page
 ---
-<article class="kitap">
+<div class="kitap">
+  <h2><img src="{{ page.image_path }}" alt="page.title" />{{ page.title }}</h2>
 
-
-    <img src="{{ page.picture }}" alt="Photo of a {{ page.title | downcase }}">
-
-
-  <h1>kitap Profile: {{ page.title }}</h1>
-
-  <div class="kitap-class {{ page.class | downcase }}">
-    {{ page.class }}
-  </div>
-
-  <div class="kitap-family {{ page.family | downcase }}">
-    {{ page.family }}
-  </div>
-
-  <div>
+  <div class="blog-post spacing">
     {{ content }}
   </div>
-
-</article>
+</div>
