--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -5,6 +5,12 @@
     <li>
       <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      {% if post.tags %}
+        <div class="tags">{{ post.tags | join: ", " }}</div>
+      {% endif %}
+      {% if post.categories %}
+        <div class="categories">{{ post.categories | join: ", " }}</div>
+      {% endif %}
     </li>
     {% endfor %}
   </ul>
