--- a/_includes/home.html
+++ b/_includes/home.html
@@ -4,6 +4,12 @@
     {% include meta.html post=post preview=true %}
     {{ post.excerpt }}
     <div class="more"><a href="{{ post.url | relative_url }}">read more</a></div>
+    {% if post.tags %}
+      <div class="tags">{{ post.tags | join: ", " }}</div>
+    {% endif %}
+    {% if post.categories %}
+      <div class="categories">{{ post.categories | join: ", " }}</div>
+    {% endif %}
   </article>
 {% endfor %}
 
