--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,12 @@ layout: default
 <article>
   {% include meta.html post=page %}
   {{ content }}
+  {% if page.tags %}
+    <div class="tags">{{ page.tags | join: ", " }}</div>
+  {% endif %}
+  {% if page.categories %}
+    <div class="categories">{{ page.categories | join: ", " }}</div>
+  {% endif %}
   {% if page.comments != false and site.comments.isso or site.comments.disqus %}
     <hr>
     {% if site.comments.isso_domain %}<div id="isso-thread"></div>{% endif %}
