Move labels and categories to right side of main page
Move labels and categories to the right side of the main page.

* Modify `_includes/home.html` to wrap the tags and categories divs in a new `right-side` div and update the layout.
* Modify `_includes/archive.html` to wrap the tags and categories divs in a new `right-side` div and update the layout.
* Update `assets/css/index.sass` to add CSS rules for the new `right-side` class.
* Update `assets/css/classes.sass` to add CSS rules for the new `right-side` class.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/orkung/orkung.github.io?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,17 +1,21 @@
 <article>
   <header><h1>{{ include.title | default: page.title }}</h1></header>
-  <ul class="archive">
+  <div class="right-side">
+    <ul class="archive">
+      {% for post in site.posts %}
+      <li>
+        <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
+        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      </li>
+      {% endfor %}
+    </ul>
     {% for post in site.posts %}
-    <li>
-      <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
-      <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
       {% if post.tags %}
         <div class="tags">{{ post.tags | join: ", " }}</div>
       {% endif %}
       {% if post.categories %}
         <div class="categories">{{ post.categories | join: ", " }}</div>
       {% endif %}
-    </li>
     {% endfor %}
-  </ul>
+  </div>
 </article>
