--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -32,3 +32,8 @@ body > footer
   box-shadow: 0 0 .6em rgba($dark, 0.04) inset
 
 {% endunless %}
+
+.right-side
+  float: right
+  width: 20%
+  margin-left: 1em
