--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,22 +1,27 @@
 {%- assign posts = paginator.posts | default: site.posts -%}
-{% for post in posts %}
-  <article>
-    {% include meta.html post=post preview=true %}
-    {{ post.excerpt }}
-    <div class="more"><a href="{{ post.url | relative_url }}">read more</a></div>
+<div class="right-side">
+  {% for post in posts %}
+    <article>
+      {% include meta.html post=post preview=true %}
+      {{ post.excerpt }}
+      <div class="more"><a href="{{ post.url | relative_url }}">read more</a></div>
+    </article>
+  {% endfor %}
+
+  {% if paginator.total_pages > 1 %}
+    <footer>
+      {% if paginator.previous_page %}<a href="{{ paginator.previous_page_path | relative_url }}">« newer posts</a>{% else %}<span></span>{% endif %}
+      <span>page {{ paginator.page }} of {{ paginator.total_pages }}</span>
+      {% if paginator.next_page %}<a href="{{ paginator.next_page_path | relative_url }}">older posts »</a>{% else %}<span></span>{% endif %}
+    </footer>
+  {% endif %}
+
+  {% for post in posts %}
     {% if post.tags %}
       <div class="tags">{{ post.tags | join: ", " }}</div>
     {% endif %}
     {% if post.categories %}
       <div class="categories">{{ post.categories | join: ", " }}</div>
     {% endif %}
-  </article>
-{% endfor %}
-
-{% if paginator.total_pages > 1 %}
-  <footer>
-    {% if paginator.previous_page %}<a href="{{ paginator.previous_page_path | relative_url }}">« newer posts</a>{% else %}<span></span>{% endif %}
-    <span>page {{ paginator.page }} of {{ paginator.total_pages }}</span>
-    {% if paginator.next_page %}<a href="{{ paginator.next_page_path | relative_url }}">older posts »</a>{% else %}<span></span>{% endif %}
-  </footer>
-{% endif %}
+  {% endfor %}
+</div>
