--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -11,10 +11,18 @@
     </ul>
     {% for post in site.posts %}
       {% if post.tags %}
-        <div class="tags">{{ post.tags | join: ", " }}</div>
+        <div class="tags">
+          {% for tag in post.tags %}
+            <a href="{{ site.baseurl }}/tag/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}
+          {% endfor %}
+        </div>
       {% endif %}
       {% if post.categories %}
-        <div class="categories">{{ post.categories | join: ", " }}</div>
+        <div class="categories">
+          {% for category in post.categories %}
+            <a href="{{ site.baseurl }}/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}
+          {% endfor %}
+        </div>
       {% endif %}
     {% endfor %}
   </div>
